// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer integration tests is a snapshot with English localization 1`] = `
<footer
  class="flex-shrink relative z-100 bg-neutral-300 dark:bg-dark-neutral-300 py-5 lg:py-8 transition-colors duration-150 "
  data-testid="test-footer"
>
  <div
    class="max-w-[77rem] mx-auto px-4 flex flex-wrap sm:flex-nowrap justify-between gap-5 sm:gap-6 md:gap-10"
  >
    <section
      class="basis-full sm:basis-[360px] grow-0 shrink"
    >
      <h2
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-400 sm:text-500 font-bold mb-4 lg:mb-5 text-neutral-900 dark:text-dark-neutral-800"
      >
        About us
      </h2>
      <a
        class="inline-flex max-w-[80px] lg:max-w-[110px] h-auto mb-3"
        href="/"
      >
        <img
          alt="MovieWander logo"
          data-nimg="1"
          decoding="async"
          height="56"
          loading="lazy"
          src="http://localhost/assets/images/logo.svg"
          style="color: transparent;"
          width="110"
        />
        <span
          class="sr-only"
        >
          To home page
        </span>
      </a>
      <p
        class="text-neutral-1000 dark:text-dark-neutral-900 mb-5 transition-colors duration-150"
      >
        Discover the world of cinema with our website!
      </p>
      <div
        class="flex items-center flex-wrap gap-2 "
      >
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.facebook.com/ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/facebook.svg#facebook"
            />
          </svg>
          <span
            class="sr-only"
          >
            Facebook
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.instagram.com/ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/instagram.svg#instagram"
            />
          </svg>
          <span
            class="sr-only"
          >
            Instagram
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.tiktok.com/@ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/tiktok.svg#tiktok"
            />
          </svg>
          <span
            class="sr-only"
          >
            Tiktok
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://twitter.com/ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/twitter.svg#twitter"
            />
          </svg>
          <span
            class="sr-only"
          >
            Twitter
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.youtube.com/@ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/youtube.svg#youtube"
            />
          </svg>
          <span
            class="sr-only"
          >
            Youtube
          </span>
        </a>
      </div>
    </section>
    <section
      class="basis-full xs:basis-[calc(50%-10px)] sm:basis-[200px] grow-0 shrink"
    >
      <h2
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-400 sm:text-500 font-bold mb-4 lg:mb-5 text-neutral-900 dark:text-dark-neutral-800"
      >
        Sections
      </h2>
      <nav>
        <ul
          class="flex flex-col gap-2"
        >
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/movies"
            >
              movies
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/persons"
            >
              persons
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/tv"
            >
              series and shows
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/new"
            >
              new releases
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/collections"
            >
              collections
            </a>
          </li>
        </ul>
      </nav>
    </section>
    <section
      class="basis-full xs:basis-[calc(50%-10px)] sm:basis-[280px] grow-0 shrink"
    >
      <h2
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-400 sm:text-500 font-bold mb-4 lg:mb-5 text-neutral-900 dark:text-dark-neutral-800"
      >
        Created based on
      </h2>
      <a
        aria-disabled="false"
        class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  "
        href="https://www.themoviedb.org/"
        rel="noopener noreferrer"
      >
        <img
          alt="tmdb logo"
          class="max-w-[140px] lg:max-w-[185px] h-auto"
          data-nimg="1"
          decoding="async"
          height="133"
          loading="lazy"
          src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_2-d537fb228cf3ded904ef09b136fe3fec72548ebc1fea3fbbd1ad9e36364db38b.svg"
          style="color: transparent;"
          width="185"
        />
      </a>
    </section>
  </div>
</footer>
`;

exports[`Footer integration tests is a snapshot with Russian localization 1`] = `
<footer
  class="flex-shrink relative z-100 bg-neutral-300 dark:bg-dark-neutral-300 py-5 lg:py-8 transition-colors duration-150 "
  data-testid="test-footer"
>
  <div
    class="max-w-[77rem] mx-auto px-4 flex flex-wrap sm:flex-nowrap justify-between gap-5 sm:gap-6 md:gap-10"
  >
    <section
      class="basis-full sm:basis-[360px] grow-0 shrink"
    >
      <h2
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-400 sm:text-500 font-bold mb-4 lg:mb-5 text-neutral-900 dark:text-dark-neutral-800"
      >
        О нас
      </h2>
      <a
        class="inline-flex max-w-[80px] lg:max-w-[110px] h-auto mb-3"
        href="/"
      >
        <img
          alt="MovieWander логотип"
          data-nimg="1"
          decoding="async"
          height="56"
          loading="lazy"
          src="http://localhost/assets/images/logo.svg"
          style="color: transparent;"
          width="110"
        />
        <span
          class="sr-only"
        >
          На главную страницу
        </span>
      </a>
      <p
        class="text-neutral-1000 dark:text-dark-neutral-900 mb-5 transition-colors duration-150"
      >
        Открывайте для себя мир кино вместе с нашим сайтом!
      </p>
      <div
        class="flex items-center flex-wrap gap-2 "
      >
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.facebook.com/ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/facebook.svg#facebook"
            />
          </svg>
          <span
            class="sr-only"
          >
            Facebook
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.instagram.com/ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/instagram.svg#instagram"
            />
          </svg>
          <span
            class="sr-only"
          >
            Instagram
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.tiktok.com/@ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/tiktok.svg#tiktok"
            />
          </svg>
          <span
            class="sr-only"
          >
            Tiktok
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://twitter.com/ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/twitter.svg#twitter"
            />
          </svg>
          <span
            class="sr-only"
          >
            Twitter
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.youtube.com/@ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/youtube.svg#youtube"
            />
          </svg>
          <span
            class="sr-only"
          >
            Youtube
          </span>
        </a>
      </div>
    </section>
    <section
      class="basis-full xs:basis-[calc(50%-10px)] sm:basis-[200px] grow-0 shrink"
    >
      <h2
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-400 sm:text-500 font-bold mb-4 lg:mb-5 text-neutral-900 dark:text-dark-neutral-800"
      >
        Разделы
      </h2>
      <nav>
        <ul
          class="flex flex-col gap-2"
        >
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/movies"
            >
              фильмы
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/persons"
            >
              люди
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/tv"
            >
              сериалы и шоу
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/new"
            >
              новинки
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/collections"
            >
              коллекции
            </a>
          </li>
        </ul>
      </nav>
    </section>
    <section
      class="basis-full xs:basis-[calc(50%-10px)] sm:basis-[280px] grow-0 shrink"
    >
      <h2
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-400 sm:text-500 font-bold mb-4 lg:mb-5 text-neutral-900 dark:text-dark-neutral-800"
      >
        Создано на основе
      </h2>
      <a
        aria-disabled="false"
        class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  "
        href="https://www.themoviedb.org/"
        rel="noopener noreferrer"
      >
        <img
          alt="tmdb logo"
          class="max-w-[140px] lg:max-w-[185px] h-auto"
          data-nimg="1"
          decoding="async"
          height="133"
          loading="lazy"
          src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_2-d537fb228cf3ded904ef09b136fe3fec72548ebc1fea3fbbd1ad9e36364db38b.svg"
          style="color: transparent;"
          width="185"
        />
      </a>
    </section>
  </div>
</footer>
`;

exports[`Footer tests is a basic snapshot 1`] = `
<footer
  class="flex-shrink relative z-100 bg-neutral-300 dark:bg-dark-neutral-300 py-5 lg:py-8 transition-colors duration-150 "
  data-testid="test-footer"
>
  <div
    class="max-w-[77rem] mx-auto px-4 flex flex-wrap sm:flex-nowrap justify-between gap-5 sm:gap-6 md:gap-10"
  >
    <section
      class="basis-full sm:basis-[360px] grow-0 shrink"
    >
      <h2
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-400 sm:text-500 font-bold mb-4 lg:mb-5 text-neutral-900 dark:text-dark-neutral-800"
      >
        About us
      </h2>
      <a
        class="inline-flex max-w-[80px] lg:max-w-[110px] h-auto mb-3"
        href="/"
      >
        <img
          alt="MovieWander logo"
          data-nimg="1"
          decoding="async"
          height="56"
          loading="lazy"
          src="http://localhost/assets/images/logo.svg"
          style="color: transparent;"
          width="110"
        />
        <span
          class="sr-only"
        >
          To home page
        </span>
      </a>
      <p
        class="text-neutral-1000 dark:text-dark-neutral-900 mb-5 transition-colors duration-150"
      >
        Discover the world of cinema with our website!
      </p>
      <div
        class="flex items-center flex-wrap gap-2 "
      >
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.facebook.com/ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/facebook.svg#facebook"
            />
          </svg>
          <span
            class="sr-only"
          >
            Facebook
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.instagram.com/ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/instagram.svg#instagram"
            />
          </svg>
          <span
            class="sr-only"
          >
            Instagram
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.tiktok.com/@ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/tiktok.svg#tiktok"
            />
          </svg>
          <span
            class="sr-only"
          >
            Tiktok
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://twitter.com/ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/twitter.svg#twitter"
            />
          </svg>
          <span
            class="sr-only"
          >
            Twitter
          </span>
        </a>
        <a
          aria-disabled="false"
          class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  text-0 flex w-10 h-10 fill-neutral-300 [&]:text-dark-neutral-300 hover:fill-neutral-400 hover:[&]:text-dark-neutral-250 active:fill-dark-neutral-500 active:[&]:text-dark-neutral-200 dark:fill-dark-neutral-300 dark:[&]:text-neutral-300 dark:hover:fill-dark-neutral-400 dark:hover:[&]:text-neutral-200 dark:active:fill-dark-neutral-500 dark:active:[&]:text-neutral-100"
          href="https://www.youtube.com/@ "
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="rounded-full"
            viewBox="0 0 32 32"
          >
            <use
              href="/assets/icons/youtube.svg#youtube"
            />
          </svg>
          <span
            class="sr-only"
          >
            Youtube
          </span>
        </a>
      </div>
    </section>
    <section
      class="basis-full xs:basis-[calc(50%-10px)] sm:basis-[200px] grow-0 shrink"
    >
      <h2
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-400 sm:text-500 font-bold mb-4 lg:mb-5 text-neutral-900 dark:text-dark-neutral-800"
      >
        Sections
      </h2>
      <nav>
        <ul
          class="flex flex-col gap-2"
        >
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/movies"
            >
              movies
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/persons"
            >
              persons
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/tv"
            >
              series and shows
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/new"
            >
              new releases
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="no-underline transition-colors duration-150 text-neutral-800 hover:text-neutral-900 active:text-neutral-1000 dark:text-dark-neutral-1000 dark:hover:text-dark-neutral-900 dark:active:text-dark-neutral-800 hover:underline  inline-flex text-200 font-medium lowercase break-all"
              href="/collections"
            >
              collections
            </a>
          </li>
        </ul>
      </nav>
    </section>
    <section
      class="basis-full xs:basis-[calc(50%-10px)] sm:basis-[280px] grow-0 shrink"
    >
      <h2
        class="leading-[1.25] -tracking-[0.01em] transition-colors duration-150 text-400 sm:text-500 font-bold mb-4 lg:mb-5 text-neutral-900 dark:text-dark-neutral-800"
      >
        Created based on
      </h2>
      <a
        aria-disabled="false"
        class="no-underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200 hover:underline  "
        href="https://www.themoviedb.org/"
        rel="noopener noreferrer"
      >
        <img
          alt="tmdb logo"
          class="max-w-[140px] lg:max-w-[185px] h-auto"
          data-nimg="1"
          decoding="async"
          height="133"
          loading="lazy"
          src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_2-d537fb228cf3ded904ef09b136fe3fec72548ebc1fea3fbbd1ad9e36364db38b.svg"
          style="color: transparent;"
          width="185"
        />
      </a>
    </section>
  </div>
</footer>
`;
